write now supports send/write/read

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,12 @@ cmake_minimum_required(VERSION 3.0)
 
 project(libr)
 
-aux_source_directory(. ROOT_SRCS)
-
 aux_source_directory(src SRCS)
 
-add_executable(send ${SRCS} ${ROOT_SRCS}) 
+add_executable(send ${SRCS} send.cpp) 
 
 target_link_libraries(send ibverbs)
+
+add_executable(write ${SRCS} write.cpp) 
+
+target_link_libraries(write ibverbs)
