Now write can support write/read/send with or without imm, and can work with event

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.0)
 
 project(libr)
 
+add_compile_options(-g)
+
 aux_source_directory(src SRCS)
 
 add_executable(send ${SRCS} send.cpp) 
