--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,16 @@
 cmake_minimum_required(VERSION 3.0)
 
+set(CMAKE_C_COMPILER "gcc-11")
+set(CMAKE_CXX_COMPILER "g++-11")
 project(libr)
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_compile_options(-g)
+add_compile_options(-g -fcoroutines -std=c++20 -static)
 
 aux_source_directory(src SRCS)
 
-
 add_executable(write ${SRCS} write.cpp) 
 
+add_executable(demo ${SRCS} demo.cpp)
+
 target_link_libraries(write ibverbs)
+target_link_libraries(demo ibverbs pthread)
