add multi qps benchmark, add hugepage alloc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,4 @@ add_executable(demo ${SRCS} demo.cpp)
 add_executable(libr_test ${SRCS} libr_test.cpp)
 
 target_link_libraries(demo ibverbs pthread)
-target_link_libraries(libr_test ibverbs)
+target_link_libraries(libr_test ibverbs pthread)
