fix bugs in malloc_2m_* which leads to useless memory allocation and large memory allocation failure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,15 @@
 cmake_minimum_required(VERSION 3.0)
 
-set(CMAKE_C_COMPILER "gcc-11")
-set(CMAKE_CXX_COMPILER "g++-11")
+set(CMAKE_C_COMPILER "gcc")
+set(CMAKE_CXX_COMPILER "g++")
 project(libr)
 
-add_compile_options(-g -o3 -fcoroutines -std=c++20 -static)
+# add_compile_options(-g -o3 -fcoroutines -std=c++20 -static)
+add_compile_options(-g -o3 -std=c++17 -static)
 
 aux_source_directory(src SRCS)
 
-add_executable(demo ${SRCS} demo.cpp)
+# add_executable(demo ${SRCS} demo.cpp)
 
 add_executable(libr_test ${SRCS} libr_test.cpp)
 
@@ -18,7 +19,7 @@ set(HEAD_FILES
 	src/connection_manager.hpp
 )
 
-target_link_libraries(demo ibverbs pthread numa)
+# target_link_libraries(demo ibverbs pthread numa)
 target_link_libraries(libr_test ibverbs pthread numa)
 
 add_library(r SHARED ${SRCS})
